--- a/package.json
+++ b/package.json
@@ -1,49 +1,80 @@
 {
   "name": "rock-paper-scissors-pwa",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
+    "start": "webpack-dev-server --port=4200",
+    "build": "webpack",
+    "test": "karma start ./karma.conf.js",
+    "test:ci": "npm t -- --browsers PhantomJS --single-run",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "protractor ./protractor.conf.js",
+    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
+    "commit": "git-cz"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/material": "^2.0.0-beta.6",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "@angular/animations": "4.1.3",
+    "@angular/common": "4.1.3",
+    "@angular/compiler": "4.1.3",
+    "@angular/core": "4.1.3",
+    "@angular/forms": "4.1.3",
+    "@angular/http": "4.1.3",
+    "@angular/material": "2.0.0-beta.6",
+    "@angular/platform-browser": "4.1.3",
+    "@angular/platform-browser-dynamic": "4.1.3",
+    "@angular/router": "4.1.3",
+    "core-js": "2.4.1",
+    "intl": "^1.2.5",
+    "rxjs": "5.4.0",
+    "zone.js": "0.8.11"
   },
   "devDependencies": {
-    "@angular/cli": "1.1.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/language-service": "^4.0.0",
+    "@angular/cli": "^1.1.0",
+    "@angular/compiler-cli": "4.1.3",
+    "@angular/language-service": "4.1.3",
     "@types/jasmine": "2.5.45",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~3.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "@types/node": "6.0.60",
+    "autoprefixer": "6.5.3",
+    "codelyzer": "3.0.1",
+    "commitizen": "^2.9.6",
+    "css-loader": "0.28.1",
+    "cssnano": "3.10.0",
+    "cz-conventional-changelog": "^2.0.0",
+    "exports-loader": "0.6.3",
+    "file-loader": "0.10.0",
+    "istanbul-instrumenter-loader": "2.0.0",
+    "jasmine-core": "2.6.2",
+    "jasmine-spec-reporter": "4.1.0",
+    "json-loader": "0.5.4",
+    "karma": "1.7.0",
+    "karma-chrome-launcher": "2.1.1",
+    "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "1.2.1",
+    "karma-jasmine": "1.1.0",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "karma-phantomjs-launcher": "1.0.4",
+    "less-loader": "4.0.2",
+    "phantomjs-prebuilt": "2.1.14",
+    "postcss-loader": "1.3.3",
+    "postcss-url": "5.1.2",
+    "protractor": "5.1.2",
+    "raw-loader": "0.5.1",
+    "sass-loader": "6.0.3",
+    "script-loader": "0.7.0",
+    "source-map-loader": "0.2.0",
+    "style-loader": "0.13.1",
+    "stylus-loader": "3.0.1",
+    "ts-node": "3.0.4",
+    "tslint": "5.3.2",
+    "typescript": "2.3.3",
+    "url-loader": "0.5.7",
+    "webpack": "2.4.0",
+    "webpack-dev-server": "2.4.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
