--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
 script:
 - npm run lint
 - npm run test:ci
-- npm run coveralls
+# - npm run coveralls # Code coverage report
 before_deploy:
 - npm install -g firebase-tools
 - echo 'About to deploy live...'
