--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "karma-jasmine-html-reporter": "0.2.2",
     "karma-phantomjs-launcher": "1.0.4",
     "less-loader": "4.0.2",
+    "offline-plugin": "4.8.1",
     "phantomjs-prebuilt": "2.1.14",
     "postcss-loader": "1.3.3",
     "postcss-url": "5.1.2",
@@ -80,7 +81,8 @@
     "typescript": "2.3.4",
     "url-loader": "0.5.7",
     "webpack": "2.4.0",
-    "webpack-dev-server": "2.4.5"
+    "webpack-dev-server": "2.4.5",
+    "webpack-pwa-manifest": "2.1.7"
   },
   "config": {
     "commitizen": {
